unpackaged/main/default/objects/Latitude__c/Latitude__c.object-meta.xml
<CustomObject>
    <label>Latitude</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Latitude Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Latitudes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>