unpackaged/main/default/objects/Latitude__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(ISBLANK( End_Date__c ),
IF(TODAY()&gt;= Start_Date__c,true,false),
IF(AND(TODAY()&gt;= Start_Date__c,TODAY()&lt;= End_Date__c ),true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>