unpackaged/main/default/objects/Latitude__c/fields/Forced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forced_Amount__c</fullName>
    <label>Forced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>