unpackaged/main/default/objects/Latitude__c/fields/Forced_Amount_Swing__c.field-meta.xml
<CustomField>
    <fullName>Forced_Amount_Swing__c</fullName>
    <label>Forced Amount Swing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>