unpackaged/main/default/objects/Latitude__c/fields/ForcedCoefSwing__c.field-meta.xml
<CustomField>
    <fullName>ForcedCoefSwing__c</fullName>
    <label>Forced Coef Swing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>