unpackaged/main/default/objects/Latitude__c/fields/Min_Amount_Swing__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount_Swing__c</fullName>
    <label>Min Amount Swing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>