unpackaged/main/default/objects/Latitude__c/fields/MinCoefSwing__c.field-meta.xml
<CustomField>
    <fullName>MinCoefSwing__c</fullName>
    <label>Min Coef Swing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>