unpackaged/main/default/objects/Latitude__c/fields/Percentage_Min__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Min__c</fullName>
    <label>Percentage Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>