unpackaged/main/default/objects/Latitude__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Latitudes</relationshipLabel>
    <relationshipName>Latitudes</relationshipName>
    <type>Lookup</type>
</CustomField>