unpackaged/main/default/objects/Latitude__c/fields/ProductLineAPICode__c.field-meta.xml
<CustomField>
    <fullName>ProductLineAPICode__c</fullName>
    <formula>Product_Line__r.API_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line - API Code</label>
    <type>Text</type>
</CustomField>