unpackaged/main/default/objects/Latitude__c/fields/Sales_Purpose_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purpose_Text__c</fullName>
    <formula>TEXT( Sales_Purpose__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Purpose Text</label>
    <type>Text</type>
</CustomField>