unpackaged/main/default/objects/Latitude__c/fields/Structure_Level_1_Text__c.field-meta.xml
<CustomField>
    <fullName>Structure_Level_1_Text__c</fullName>
    <formula>TEXT( Structure_Level_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Structure Level 1 Text</label>
    <type>Text</type>
</CustomField>