unpackaged/main/default/objects/Latitude__c/fields/Validation_Group_Level__c.field-meta.xml
<CustomField>
    <fullName>Validation_Group_Level__c</fullName>
    <label>Validation Group Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Validation_Group_Level</valueSetName>
    </valueSet>
</CustomField>