unpackaged/main/default/objects/Latitude__c/fields/Validation_Group_Level_Text__c.field-meta.xml
<CustomField>
    <fullName>Validation_Group_Level_Text__c</fullName>
    <formula>TEXT( Validation_Group_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validation Group Level Text</label>
    <type>Text</type>
</CustomField>