unpackaged/main/default/objects/Latitude__c/recordTypes/Swing.recordType-meta.xml
<RecordType>
    <fullName>Swing</fullName>
    <active>true</active>
    <label>Swing</label>
</RecordType>