unpackaged/main/default/objects/Latitude__c/listViews/All_Latitudes.listView-meta.xml
<ListView>
    <fullName>All_Latitudes</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Structure_Level_1__c</columns>
    <columns>Sales_Purpose__c</columns>
    <columns>Validation_Group_Level__c</columns>
    <columns>Forced_Amount__c</columns>
    <columns>Min_Amount__c</columns>
    <columns>Percentage_Min__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>